# megatoy

./: .gitignore  CMakeLists.txt  LICENSES.md  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: build.yml  release.yml
.zed/: settings.json
assets/images/imgui_dark/: ssg.ase
assets/images/megatoy_light/: algorithm.ase
assets/imgui_dark/: algorithm.ase
assets/megatoy_dark/: algorithm.ase  ssg.ase
assets/megatoy_light/: ssg.ase
assets/presets/: LICENSE  bright piano.dmp  distortion guitar.dmp  electric piano.dmp  flute.dmp  grand piano.dmp  init.dmp  piano.dmp  ssg cocktail.dmp
cmake/: deps.cmake  embed_assets.cmake  targets.cmake  update_compile_commands.cmake  windows_icon.rc.in
docs/: BUILD_LINUX.md  BUILD_WEB.md  TEST.md
licenses/: README.md  THIRD_PARTY_NOTICES.md  megatoy-MIT.txt  presets-CC0.txt  rtmidi-MIT.txt
src/: app_context.cpp  app_context.hpp  app_services.cpp  app_services.hpp  app_state.cpp  app_state.hpp  audio_manager.cpp  audio_manager.hpp  channel_allocator.cpp  channel_allocator.hpp  drop_actions.cpp  drop_actions.hpp  gui_manager.cpp  gui_manager.hpp  input_state.hpp  main.cpp  midi_usb.cpp  midi_usb.hpp  note_actions.hpp  patch_actions.hpp  preference_manager.cpp  preference_manager.hpp  preference_storage_json.cpp  preferences_data.hpp  project_info.hpp.in  resource_manager.cpp  resource_manager.hpp  runtime_context.hpp  types.hpp
src/audio/: audio_engine.cpp  audio_engine.hpp  audio_manager.cpp  audio_manager.hpp  audio_runtime.cpp  audio_runtime.hpp  audio_subsystem.cpp  audio_subsystem.hpp  audio_transport.hpp  sdl_audio_transport.cpp  sdl_audio_transport.hpp  webaudio_transport.cpp  webaudio_transport.hpp
src/core/: random_utils.cpp  random_utils.hpp  types.hpp
src/formats/: common.cpp  common.hpp  ctrmml.cpp  ctrmml.hpp  dmp.cpp  dmp.hpp  fui.cpp  fui.hpp  gin.cpp  gin.hpp  ginpkg.cpp  ginpkg.hpp  patch_loader.cpp  patch_loader.hpp  patch_registry.cpp  patch_registry.hpp  rym2612.cpp  rym2612.hpp
src/gui/: gui_manager.cpp  gui_manager.hpp  gui_runtime.cpp  gui_runtime.hpp  gui_subsystem.cpp  gui_subsystem.hpp  imgui_ini_bridge.cpp  imgui_ini_bridge.hpp  imgui_ini_bridge_web.cpp  save_export_actions.cpp  save_export_actions.hpp  save_export_state.hpp  ui_renderer.cpp  ui_renderer.hpp  window_title.hpp
src/gui/components/: about_dialog.cpp  about_dialog.hpp  common.hpp  confirmation_dialog.cpp  confirmation_dialog.hpp  envelope_image.cpp  envelope_image.hpp  file_manager.hpp  history_helpers.hpp  keyboard_typing.cpp  keyboard_typing.hpp  main_menu.cpp  main_menu.hpp  midi_keyboard.cpp  midi_keyboard.hpp  mml_console.cpp  mml_console.hpp  operator_editor.cpp  operator_editor.hpp  patch_drop.cpp  patch_drop.hpp  patch_editor.cpp  patch_editor.hpp  patch_history.cpp  patch_history.hpp  patch_lab_window.cpp  patch_lab_window.hpp  patch_selector.cpp  patch_selector.hpp  patch_ui.hpp  preferences.cpp  preferences.hpp  util.hpp  waveform.cpp  waveform.hpp
src/gui/fonts/: icon_font.hpp
src/gui/image/: resource_manager.cpp  texture_utils.cpp  texture_utils.hpp
src/gui/input/: key_name_utils.hpp  keyboard_typing.cpp  keyboard_typing.hpp  typing_keyboard_layout.hpp
src/gui/styles/: imgui_dark.hpp  megatoy_dark.hpp  megatoy_light.hpp  megatoy_style.cpp  megatoy_style.hpp
src/history/: history_entry.hpp  history_manager.cpp  history_manager.hpp  snapshot_entry.hpp
src/midi/: midi_backend.hpp  midi_input_manager.cpp  midi_input_manager.hpp  rtmidi_backend.cpp  rtmidi_backend.hpp
src/parsers/: ctrmml_parser.cpp  ctrmml_parser.hpp  dmp_parser.cpp  dmp_parser.hpp  fui_parser.cpp  fui_parser.hpp  patch_loader.cpp  patch_loader.hpp  rym2612_parser.cpp  rym2612_parser.hpp  util.cpp  util.hpp
src/patches/: filename_utils.hpp  filesystem_patch_storage.cpp  filesystem_patch_storage.hpp  patch_drop_service.cpp  patch_drop_service.hpp  patch_editing_session.cpp  patch_editing_session.hpp  patch_hash.cpp  patch_hash.hpp  patch_lab.cpp  patch_lab.hpp  patch_manager.cpp  patch_manager.hpp  patch_metadata.cpp  patch_metadata.hpp  patch_repository.cpp  patch_repository.hpp  patch_session.cpp  patch_session.hpp  patch_session_native.cpp  patch_session_web.cpp  patch_storage.hpp  web_patch_storage.cpp  web_patch_storage.hpp
src/platform/: clipboard.cpp  clipboard.hpp  file_dialog.cpp  file_dialog.hpp  platform_config.hpp  platform_services.hpp  run_loop.hpp  run_loop_native.cpp  run_loop_web.cpp  std_file_system.cpp  std_file_system.hpp  virtual_file_system.hpp  windows_entry.cpp
src/platform/native/: desktop_platform_services.cpp  desktop_platform_services.hpp  native_file_system.cpp  native_file_system.hpp
src/platform/web/: local_storage.cpp  local_storage.hpp  web_download.cpp  web_download.hpp  web_file_system.cpp  web_file_system.hpp  web_midi_backend.cpp  (+7 more)
src/preferences/: preference_manager.cpp  preference_manager.hpp  preference_storage.hpp  preference_storage_json.cpp  preferences_data.hpp
src/system/: data_paths.cpp  data_paths.hpp  directory_service.cpp  directory_service.hpp  open_default_browser.cpp  open_default_browser.hpp  open_default_browser.mm  path_resolver.cpp  path_resolver.hpp  path_service.cpp  path_service.hpp
src/ui/: dark_theme.hpp  envelope_image.cpp  envelope_image.hpp  file_manager.hpp  history_helpers.hpp  keyboard_typing.cpp  keyboard_typing.hpp  main_menu.cpp  main_menu.hpp  midi_keyboard.cpp  midi_keyboard.hpp  mml_console.cpp  mml_console.hpp  operator_editor.cpp  operator_editor.hpp  patch_drop.cpp  patch_drop.hpp  patch_editor.cpp  patch_editor.hpp  patch_selector.cpp  patch_selector.hpp  preferences.cpp  preferences.hpp  util.hpp  waveform.cpp
src/update/: release_provider.cpp  release_provider.hpp  update_checker.cpp  update_checker.hpp
src/ym2612/: channel.cpp  channel.hpp  device.cpp  device.hpp  fft_analyzer.cpp  fft_analyzer.hpp  note.hpp  operator.cpp  operator.hpp  patch.hpp  patch_io.cpp  patch_io.hpp  types.hpp  wave_sampler.cpp  wave_sampler.hpp
tests/: subsystem_tests.cpp
tests/core/: patch_io_roundtrip_test.cpp  patch_registry_test.cpp  random_utils_test.cpp
(+14 files in other folders)
